--- a/Final_paper.Rmd
+++ b/Final_paper.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Final Project Instructions"
-subtitle: "Kreslyn Hinds"
+title: "Title: (come up with something catchy) *Assessment: Does the title give an accurate preview of what the paper is about? Is it informative, specific, precise?*"
+subtitle: "Authors: Kati Fulton, Kreslyn Hinds, Tracia Pan"
 graphics: yes
 output: 
         pdf_document:
@@ -15,13 +15,46 @@ fontsize: 11pt
 
 ---
 
+b. **Abstract**: The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
+   
+     *Assessment: Are the main points of the paper clearly and succinctly described?*
+     
+     
+c. **Keywords**: four-five summary words that are relevant to the topic and your methods.
+* mRNA
+* FDA Emergency Use Authorization (EUA)
+* two-dose vaccine (BNT162b2)
+* SARS-CoV-2 ("COVID-19"). 
+   
+d. **Introduction**: In this section you are providing the background of the research area and arguing why it is interesting and significant. 
+  - *Does the background and significance have a logical organization?*
+  - *Does it move from the general to the specific?*
+    
+  - *Has sufficient background been provided to understand the paper?* 
+    
+  - *How does this work relate to other work in the scientific literature?*
+    
+  - *Has a reasonable explanation been given for why the research was done? Why is the work important? Why is it relevant?*
+    
+
+This section relies heavily on literature review (prior research done in this area and facts that argue why the research is important). 
+
+This whole section should provide the necessary background leading up to a presentation (in the last few sentences of this section)
+
+of the research hypotheses that you will be testing in your study.  
+Well-accepted facts and/or referenced statements should serve as the majority of content of this section. Typically, the background and significance section starts very broad and moves towards the specific area/hypotheses you are testing.
+
+Example intro from other paper: Coronavirus disease 2019 (Covid-19) has affected tens of millions of people globally since it was declared a pandemic by the World Health Organization on March 11, 2020. Older adults, persons with certain coexisting conditions, and front-line workers are at highest risk for Covid-19 and its complications. Recent data show increasing rates of severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) infection and Covid-19 in other populations, including younger adults. Safe and effective prophylactic vaccines are urgently needed to contain the pandemic, which has had devastating medical, economic, and social consequences.
+
+Here, we report safety and efficacy findings from the phase 2/3 part of a global phase 1/2/3 trial evaluating the safety, immunogenicity, and efficacy of 30 of BNT162b2 in preventing Covid-19 in persons 16 years of age or older. This data set and these trial results are the basis for an application for emergency use authorization.9 Collection of phase 2/3 data on vaccine immunogenicity and the durability of the immune response to immunization is ongoing, and those data are not reported here.
+
+
 In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their two-dose vaccine (BNT162b2) for SARS-CoV-2 ("COVID-19"). 
-In this paper, you will analyze their data, as reported by Polack et al. [here](https://www.nejm.org/doi/full/10.1056/nejmoa2034577). 
 
 In brief, this placebo-controlled, observer-blinded, efficacy study randomly assigned persons 16 years of age or older in a 1:1 ratio to receive two doses, 21 days apart, of either placebo or the candidate, BNT162b2 vaccine, which was based the mRNA approach, as Moderna used, but not Janssen (Johnson and Johnson) or AstraZeneca. The primary efficacy endpoint was the time of laboratory-confirmed COVID-19. A total of 170 infections were targeted. 
 
-The relevant data from Table 2 of the paper referenced above is summarized below:
 
+Using the data as reported by Polack et al. [here](https://www.nejm.org/doi/full/10.1056/nejmoa2034577) specifically the relevant data from Table 2 of the paper referenced above (summarized below):
 \begin{table}[h]
 \centering
 \caption{Vaccine Efficacy against Covid 19 at least 7 days after second dose in patients without evidence of infection}
@@ -31,52 +64,11 @@ BNT162b2 & 8 & 17,411 \\
 Placebo & 162 & 17,511 \\ \hline
 Total & 170 & 34,922 \\ \hline
 \end{tabular}
-\end{table}
-
-In the paper, the authors used a Bayesian beta binomial model with the transformation 
-$$\pi = \frac{\pi_v}{\pi_v+\pi_p}$$
-where $\pi_v$ and $\pi_p$ are the probabilities of an infection in the vaccine and placebo groups respectively. 
+\end{table} 
 
 
-They estimated the vaccine efficacy $\psi = \frac{1-2 \pi}{1-\pi}$ to be 95\%. The 95\% Bayesian credible interval for $\psi$  was $[90.3\%, 97.6\%]$, and they reported that the Bayesian estimate for the probability that vaccine efficacy exceeded 30\% was larger than 0.9999. 
-
-Your task is to analyze these same data, but using other methods you have learned in STAT 341-342 or beyond.
-
-1. Each group must turn in ONE copy of their final paper (typeset) by 11:59 PM on Sunday June 3, 2024 in Gradescope.
-
-2. The paper (excluding the appendix) should be no more than 13 pages, 11 pt font and double spaced. The complete report (including the appendix) should be no longer than 22 pages. You may use the YAML in the instruction document as your header.
-
-3. Use an appropriate scientific writing style.  Don’t be overly formal, but not overly casual either. Find that happy medium.
-
-4. Your paper should contain the following sections.
-
-a. **Title** (come up with something catchy) and authors (group members listed in alphabetic order or by contribution)
-   
-     *Assessment: Does the title give an accurate preview of what the paper is about? Is it informative, specific, precise?*
-   
-b. **Abstract**: The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
-   
-     *Assessment: Are the main points of the paper clearly and succinctly described?*
-   
-c. **Keywords**: four-five summary words that are relevant to the topic and your methods.
-   
-d. **Introduction**: In this section you are providing the background of the research area and arguing why it is interesting and significant. This section relies heavily on literature review (prior research done in this area and facts that argue why the research is important). This whole section should provide the necessary background leading up to a presentation (in the last few sentences of this section) of the research hypotheses that you will be testing in your study.  Well-accepted facts and/or referenced statements should serve as the majority of content of this section. Typically, the background and significance section starts very broad and moves towards the specific area/hypotheses you are testing.
-   
-  *Assessment:*
-  
-  - *Does the background and significance have a logical organization?* 
-    
-  - *Does it move from the general to the specific?*
-    
-  - *Has sufficient background been provided to understand the paper?* 
-    
-  - *How does this work relate to other work in the scientific literature?*
-    
-  - *Has a reasonable explanation been given for why the research was done? Why is the work important? Why is it relevant?*
-    
-  - *Does this section end with statements about the hypothesis/goals of the paper?*
-   
-   
+- *Does this section end with statements about the hypothesis/goals of the paper?*
+Using this data. we will test null hypothesis and alternative hypothesis ... using MLE and MOM methods to estimate the efficacy rate of the vaccination
    
 e. **Statistical Methods**: begin with defining the random variable and your statistical model, define the parameter of interest and then describe at least two different approaches you will use to make inference about it. 
 
@@ -114,8 +106,20 @@ g. **Discussion/Conclusion**: discuss your findings in practical terms, compare 
    
    - *Were specific data cited from the results to support each interpretation? Do the authors clearly articulate the basis for supporting or rejecting each hypothesis?*
    
+   
+Reference the papers results?
+
+In the paper, the authors used a Bayesian beta binomial model with the transformation 
+$$\pi = \frac{\pi_v}{\pi_v+\pi_p}$$
+where $\pi_v$ and $\pi_p$ are the probabilities of an infection in the vaccine and placebo groups respectively. 
+
+
+They estimated the vaccine efficacy $\psi = \frac{1-2 \pi}{1-\pi}$ to be 95\%. The 95\% Bayesian credible interval for $\psi$  was $[90.3\%, 97.6\%]$, and they reported that the Bayesian estimate for the probability that vaccine efficacy exceeded 30\% was larger than 0.9999. 
+   
   
 h.  **References**: List at least three references for your paper. These can be other articles on the subject/data, or mathematical references for the statistical techniques that you used. Each item you list here should be cited/referenced at least once in the actual text. For example, [here](https://errorstatistics.com/2021/01/17/s-senn-beta-testing-the-pfizer-biontech-statistical-analysis-of-their-covid-19-vaccine-trial-guest-post/) is a blog by Stephen Senn that really helped me understand the problem. He's a great writer and you could read his other blogs on the vaccine trials.
+
+**Reference Polack et al.** [here](https://www.nejm.org/doi/full/10.1056/nejmoa2034577)
    
    *Assessment*
    
