--- a/Final_paper.Rmd
+++ b/Final_paper.Rmd
@@ -14,17 +14,17 @@ header-includes:
 fontsize: 11pt
 
 ---
-
 b. **Abstract**: The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
    
      *Assessment: Are the main points of the paper clearly and succinctly described?*
      
      
 c. **Keywords**: four-five summary words that are relevant to the topic and your methods.
-* mRNA
-* FDA Emergency Use Authorization (EUA)
-* two-dose vaccine (BNT162b2)
-* SARS-CoV-2 ("COVID-19"). 
+* Maximum Likelihood Estimation:
+* Method of Moments Estimation:
+* FDA Emergency Use Authorization (EUA): 
+* two-dose vaccine (BNT162b2):
+* SARS-CoV-2 ("COVID-19"):
    
 d. **Introduction**: In this section you are providing the background of the research area and arguing why it is interesting and significant. 
   - *Does the background and significance have a logical organization?*
@@ -39,22 +39,15 @@ d. **Introduction**: In this section you are providing the background of the res
 
 This section relies heavily on literature review (prior research done in this area and facts that argue why the research is important). 
 
-This whole section should provide the necessary background leading up to a presentation (in the last few sentences of this section)
+This whole section should provide the necessary background leading up to a presentation (in the last few sentences of this section)of the research hypotheses that you will be testing in your study. 
 
-of the research hypotheses that you will be testing in your study.  
 Well-accepted facts and/or referenced statements should serve as the majority of content of this section. Typically, the background and significance section starts very broad and moves towards the specific area/hypotheses you are testing.
 
-Example intro from other paper: Coronavirus disease 2019 (Covid-19) has affected tens of millions of people globally since it was declared a pandemic by the World Health Organization on March 11, 2020. Older adults, persons with certain coexisting conditions, and front-line workers are at highest risk for Covid-19 and its complications. Recent data show increasing rates of severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) infection and Covid-19 in other populations, including younger adults. Safe and effective prophylactic vaccines are urgently needed to contain the pandemic, which has had devastating medical, economic, and social consequences.
+With a total of 775 million cases and 7 million deaths reported from January 2020-May 2024 (https://data.who.int/dashboards/covid19/deaths?n=o), Coronavirus has affected people around the globe and continues to be an ongoing concern. After being declared a pandemic by the World Health Organization on March 11, 2020 (https://www.cdc.gov/museum/timeline/covid19.html#:~:text=March%2011%2C%202020,declares%20COVID%2D19%20a%20pandemic) emergency use authorizations we issued to combat the virus.
 
-Here, we report safety and efficacy findings from the phase 2/3 part of a global phase 1/2/3 trial evaluating the safety, immunogenicity, and efficacy of 30 of BNT162b2 in preventing Covid-19 in persons 16 years of age or older. This data set and these trial results are the basis for an application for emergency use authorization.9 Collection of phase 2/3 data on vaccine immunogenicity and the durability of the immune response to immunization is ongoing, and those data are not reported here.
+In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their two-dose vaccine (BNT162b2) for SARS-CoV-2 ("COVID-19") (instructions).
 
-
-In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their two-dose vaccine (BNT162b2) for SARS-CoV-2 ("COVID-19"). 
-
-In brief, this placebo-controlled, observer-blinded, efficacy study randomly assigned persons 16 years of age or older in a 1:1 ratio to receive two doses, 21 days apart, of either placebo or the candidate, BNT162b2 vaccine, which was based the mRNA approach, as Moderna used, but not Janssen (Johnson and Johnson) or AstraZeneca. The primary efficacy endpoint was the time of laboratory-confirmed COVID-19. A total of 170 infections were targeted. 
-
-
-Using the data as reported by Polack et al. [here](https://www.nejm.org/doi/full/10.1056/nejmoa2034577) specifically the relevant data from Table 2 of the paper referenced above (summarized below):
+Using data as reported by Polack et al. (add citation here) specifically the relevant data from Table 2 of the paper referenced above (summarized below):
 \begin{table}[h]
 \centering
 \caption{Vaccine Efficacy against Covid 19 at least 7 days after second dose in patients without evidence of infection}
@@ -68,7 +61,8 @@ Total & 170 & 34,922 \\ \hline
 
 
 - *Does this section end with statements about the hypothesis/goals of the paper?*
-Using this data. we will test null hypothesis and alternative hypothesis ... using MLE and MOM methods to estimate the efficacy rate of the vaccination
+
+We will use maximum likelihood estimation and method of moments estimation to report the estimated efficacy rate of the Pfizer vaccine. Using these estimates we will preform hypothesis testing to determine if the efficacy rate meets FDA requirements of at least 30% (slides physician health slide 7).
    
 e. **Statistical Methods**: begin with defining the random variable and your statistical model, define the parameter of interest and then describe at least two different approaches you will use to make inference about it. 
 
@@ -131,25 +125,3 @@ h.  **References**: List at least three references for your paper. These can be 
 h. **Appendix**: Include important R code, R output and additional plots/figures. Any plots you include in your report should be cited in the body of the report. There should be a reason for the plot – something you want the reader to see. Note: tables and figures which are pertinent to your analysis should be included in the body of your report, not in the appendix. The reader should not have to look at your appendix for main results/figures. 
     
     For example, you can write your code in chunks interspersed within the document, with chunk option `include = FALSE`. Then refer to the code chunk in the Appendix to print it. 
-
-
-
-5. **Rubric**
-
-  - Each section mentioned above will be assigned points.
-  
-  -	Some general criteria we will use may include evidence of synthesis of ideas from the entire sequence, accuracy of data analysis, conclusions and discussion, overall clarity and presentation, originality, creativity, writing quality and organization
-  
-  -	Peer review: Each group member will complete a peer evaluation form providing feedback on the contribution of group members and scoring them on various criteria. 
-
-6. **Expectation of team work**
-
-   Assigning roles to each team member is a vital part of ensuring your team works smoothly together. For example, in a three person group, you could designate to each member one of the following roles:
-   - Project manager: someone who has vision and can help with breaking things into tasks and identifying key due dates,
-   - Editor: someone who takes charge of the final document, proofreads sections and ensures that there are no inaccuracies.
-   - Meeting facilitator: someone who is good at guiding conversation can help ensure that the meetings stay productive and also democratic
- 
-   The drafting of the main sections of the written report must be assigned to different members of the group. For example, in a 3-person group, one person might draft the first outline of the Introduction, another the Statistical Methods, the third the Results section and Discussion. Then you may all collaborate on editing and improving each section. Everyone should read all sections and suggest changes/edits, but one person will most likely be responsible for making all the editorial changes. 
-The assignment of writing responsibilities should be noted on the peer review form. 
-
-
