--- a/Final_paper.Rmd
+++ b/Final_paper.Rmd
@@ -15,39 +15,22 @@ fontsize: 11pt
 
 ---
 b. **Abstract**: The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
+
+**adding words:** The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
    
      *Assessment: Are the main points of the paper clearly and succinctly described?*
      
      
-c. **Keywords**: four-five summary words that are relevant to the topic and your methods.
-* Maximum Likelihood Estimation:
-* Method of Moments Estimation:
-* FDA Emergency Use Authorization (EUA): 
-* two-dose vaccine (BNT162b2):
-* SARS-CoV-2 ("COVID-19"):
-   
-d. **Introduction**: In this section you are providing the background of the research area and arguing why it is interesting and significant. 
-  - *Does the background and significance have a logical organization?*
-  - *Does it move from the general to the specific?*
-    
-  - *Has sufficient background been provided to understand the paper?* 
-    
-  - *How does this work relate to other work in the scientific literature?*
-    
-  - *Has a reasonable explanation been given for why the research was done? Why is the work important? Why is it relevant?*
-    
+c. **Keywords**:
+* Maximum Likelihood Estimation: Using the likelihood function of a parameter, the maximum likelihood estimation approach for estimating a parameter finds the maximum of the function after a log transformation by using it's first and second derivative. After finding the maximum of the function we can solve for the estimated parameter (chapter 24).
+* Method of Moments Estimation: With the assumption that the expected value of x will be a function of a parameter and the sample average will be close to the expected value, methods of moments estimation sets the sample average equal to the expected value and solves for the estimated parameter (deck 17, slide 5)
+* Food and Drug Administration (FDA) Emergency Use Authorization (EUA): A mechanism of the FDA to enable the usage of medical countermeasures during public health emergencies. This may include allowing use of unapproved medical products or allowing the usage of already approved medical products for an unapproved purpose. 
+* Coronavirus (COVID 19): A contagious infectious disease caused by SARS-CoV-2, first originating in Wuhan, China December 2019 $^1$.
+* Pfizer Vaccine (BNT162b2):A two-dose vaccine for SARS-CoV-2, safe for all individuals 6 months and above 
 
-This section relies heavily on literature review (prior research done in this area and facts that argue why the research is important). 
+d. **Introduction**: With a total of 775 million cases and 7 million deaths reported from January 2020-May 2024 $^4$, Coronavirus has affected people around the globe and continues to be an ongoing concern. After being declared a pandemic by the World Health Organization on March 11, 2020$^1$ emergency use authorizations were issued to combat the virus. In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their vaccine (BNT162b2) for COVID 19 (instructions).
 
-This whole section should provide the necessary background leading up to a presentation (in the last few sentences of this section)of the research hypotheses that you will be testing in your study. 
-
-Well-accepted facts and/or referenced statements should serve as the majority of content of this section. Typically, the background and significance section starts very broad and moves towards the specific area/hypotheses you are testing.
-
-With a total of 775 million cases and 7 million deaths reported from January 2020-May 2024 (https://data.who.int/dashboards/covid19/deaths?n=o), Coronavirus has affected people around the globe and continues to be an ongoing concern. After being declared a pandemic by the World Health Organization on March 11, 2020 (https://www.cdc.gov/museum/timeline/covid19.html#:~:text=March%2011%2C%202020,declares%20COVID%2D19%20a%20pandemic) emergency use authorizations we issued to combat the virus.
-
-In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their two-dose vaccine (BNT162b2) for SARS-CoV-2 ("COVID-19") (instructions).
-
-Using data as reported by Polack et al. (add citation here) specifically the relevant data from Table 2 of the paper referenced above (summarized below):
+Using data as reported by Polack et al. $^2$ specifically the relevant data from Table 2 of the paper referenced above (summarized below):
 \begin{table}[h]
 \centering
 \caption{Vaccine Efficacy against Covid 19 at least 7 days after second dose in patients without evidence of infection}
@@ -59,10 +42,7 @@ Total & 170 & 34,922 \\ \hline
 \end{tabular}
 \end{table} 
 
-
-- *Does this section end with statements about the hypothesis/goals of the paper?*
-
-We will use maximum likelihood estimation and method of moments estimation to report the estimated efficacy rate of the Pfizer vaccine. Using these estimates we will preform hypothesis testing to determine if the efficacy rate meets FDA requirements of at least 30% (slides physician health slide 7).
+We will use maximum likelihood estimation and method of moments estimation to report the estimated efficacy rate of the Pfizer vaccine. Using these estimates we will preform hypothesis testing to determine if the efficacy rate meets the EUA FDA requirements of at least 30% (slides physician health slide 7).
    
 e. **Statistical Methods**: begin with defining the random variable and your statistical model, define the parameter of interest and then describe at least two different approaches you will use to make inference about it. 
 
@@ -113,7 +93,15 @@ They estimated the vaccine efficacy $\psi = \frac{1-2 \pi}{1-\pi}$ to be 95\%. T
   
 h.  **References**: List at least three references for your paper. These can be other articles on the subject/data, or mathematical references for the statistical techniques that you used. Each item you list here should be cited/referenced at least once in the actual text. For example, [here](https://errorstatistics.com/2021/01/17/s-senn-beta-testing-the-pfizer-biontech-statistical-analysis-of-their-covid-19-vaccine-trial-guest-post/) is a blog by Stephen Senn that really helped me understand the problem. He's a great writer and you could read his other blogs on the vaccine trials.
 
-**Reference Polack et al.** [here](https://www.nejm.org/doi/full/10.1056/nejmoa2034577)
+
+
+1. [COVID-19 Timeline](https://www.cdc.gov/museum/timeline/covid19.html#:~:text=March%2011%2C%202020,declares%20COVID%2D19%20a%20pandemic.)
+
+2. [Polack et al.](https://www.nejm.org/doi/full/10.1056/nejmoa2034577)
+
+3. [About the vaccine ](https://www.who.int/news-room/feature-stories/detail/who-can-take-the-pfizer-biontech-covid-19--vaccine-what-you-need-to-know)
+
+4.[dashboard for covid cases](https://data.who.int/dashboards/covid19/deaths?n=o)
    
    *Assessment*
    
