--- a/Final_paper.Rmd
+++ b/Final_paper.Rmd
@@ -18,17 +18,16 @@ b. **Abstract**: The abstract provides a brief summary of the entire paper (back
 
 **adding words:** The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.The abstract provides a brief summary of the entire paper (background, methods, results and conclusions). The suggested length is no more than 150 words. This allows you approximately 1 sentence (and likely no more than two sentences) summarizing each of the following sections. Typically, abstracts are the last thing you write.
    
-     *Assessment: Are the main points of the paper clearly and succinctly described?*
-     
+  *Assessment: Are the main points of the paper clearly and succinctly described?*
      
 c. **Keywords**:
-* Maximum Likelihood Estimation: Using the likelihood function of a parameter, the maximum likelihood estimation approach for estimating a parameter finds the maximum of the function after a log transformation by using it's first and second derivative. After finding the maximum of the function we can solve for the estimated parameter (chapter 24).
-* Method of Moments Estimation: With the assumption that the expected value of x will be a function of a parameter and the sample average will be close to the expected value, methods of moments estimation sets the sample average equal to the expected value and solves for the estimated parameter (deck 17, slide 5)
-* Food and Drug Administration (FDA) Emergency Use Authorization (EUA): A mechanism of the FDA to enable the usage of medical countermeasures during public health emergencies. This may include allowing use of unapproved medical products or allowing the usage of already approved medical products for an unapproved purpose. 
+* Maximum Likelihood Estimation: Using the likelihood function of a parameter, the maximum likelihood estimation approach for estimating a parameter finds the maximum of the function after a log transformation by using it's first and second derivative. After finding the maximum of the function we can solve for the estimated parameter $^{6.1}$.
+* Method of Moments Estimation: With the assumption that the expected value of a random variable will be a function of a parameter and the sample average will be close to the expected value, methods of moments estimation sets the sample average equal to the expected value and solves for the estimated parameter $^{6.2}$.
+* Food and Drug Administration (FDA) Emergency Use Authorization (EUA): A mechanism of the FDA to enable the usage of medical countermeasures during public health emergencies. This may include allowing use of unapproved medical products or allowing the usage of already approved medical products for an unapproved purpose $^5$. 
 * Coronavirus (COVID 19): A contagious infectious disease caused by SARS-CoV-2, first originating in Wuhan, China December 2019 $^1$.
-* Pfizer Vaccine (BNT162b2):A two-dose vaccine for SARS-CoV-2, safe for all individuals 6 months and above 
+* Pfizer Vaccine (BNT162b2):A two-dose vaccine for SARS-CoV-2, safe for all individuals 6 months and above $^3$.
 
-d. **Introduction**: With a total of 775 million cases and 7 million deaths reported from January 2020-May 2024 $^4$, Coronavirus has affected people around the globe and continues to be an ongoing concern. After being declared a pandemic by the World Health Organization on March 11, 2020$^1$ emergency use authorizations were issued to combat the virus. In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their vaccine (BNT162b2) for COVID 19 (instructions).
+d. **Introduction**: With a total of 775 million cases and 7 million deaths reported from January 2020-May 2024 $^4$, Coronavirus has affected people around the globe and continues to be an ongoing concern. After being declared a pandemic by the World Health Organization on March 11, 2020 $^1$ emergency use authorizations were issued to combat the virus. In December 2020, Pfizer and BioNTech successfully obtained a US FDA Emergency Use Authorization (EUA) to begin distributing their vaccine (BNT162b2) for COVID 19 $^{6.3}$.
 
 Using data as reported by Polack et al. $^2$ specifically the relevant data from Table 2 of the paper referenced above (summarized below):
 \begin{table}[h]
@@ -42,7 +41,7 @@ Total & 170 & 34,922 \\ \hline
 \end{tabular}
 \end{table} 
 
-We will use maximum likelihood estimation and method of moments estimation to report the estimated efficacy rate of the Pfizer vaccine. Using these estimates we will preform hypothesis testing to determine if the efficacy rate meets the EUA FDA requirements of at least 30% (slides physician health slide 7).
+We will use maximum likelihood estimation and method of moments estimation to report the estimated efficacy rate of the Pfizer vaccine. Using these estimates we will preform hypothesis testing to determine if the efficacy rate meets the FDA EUA requirements of at least 30% $^{6.4}$.
    
 e. **Statistical Methods**: begin with defining the random variable and your statistical model, define the parameter of interest and then describe at least two different approaches you will use to make inference about it. 
 
@@ -101,7 +100,15 @@ h.  **References**: List at least three references for your paper. These can be 
 
 3. [About the vaccine ](https://www.who.int/news-room/feature-stories/detail/who-can-take-the-pfizer-biontech-covid-19--vaccine-what-you-need-to-know)
 
-4.[dashboard for covid cases](https://data.who.int/dashboards/covid19/deaths?n=o)
+4. [dashboard for covid cases](https://data.who.int/dashboards/covid19/deaths?n=o)
+
+5. [About EUA](https://www.fda.gov/vaccines-blood-biologics/vaccines/emergency-use-authorization-vaccines-explained)
+
+6. Stat 342 Materials: 
+* 6.1 - Slide deck 24, slides 10,34 
+* 6.2 - Slide deck 17, slide 5
+* 6.3 - Assignment instructions
+* 6.4 - Slide deck physician-health, slide 7
    
    *Assessment*
    
